<resources>
    <string name="app_name">DND Utility</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_initiative_tracker">Initiative Tracker</string>
    <string name="ac_text">AC</string>
    <string name="init_text">Init</string>
    <string name="name_text">Name</string>
    <string name="menuHomeName">Home</string>
    <string name="menuInitiative_trackerName">Initiative Tracker</string>
    <string name="menuHealth_trackerName">Health Tracker</string>
    <string name="menuCommunicateName">Communicate</string>
    <string name="menuShareName">Share</string>
    <string name="menuSendName">Send</string>
    <string name="saves_text">Saves</string>
    <string name="title_activity_comms_tester">CommsTester</string>
    <string name="healthListSettings">HEALTHMENU</string>
</resources>
