<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/initiative_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">

    <TableRow
        android:id="@+id/top_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/init_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_cell_shape_top"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="@string/init_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_cell_shape_top"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="@string/name_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/AC_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_cell_shape_top"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="@string/ac_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/saves_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_cell_shape_top"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="@string/saves_text"
            android:textSize="24sp" />

    </TableRow>
</TableLayout>
